JK - tweaked the routes a little
