# swagger.json
@@ -13,10 +13,7 @@
   "paths": {
     "/api-docs": {
       "get": {
-        "tags": [
-          "API-Docs"
-        ],
-        "description": "Get API-DOCS",
+        "description": "",
         "responses": {
           "default": {
             "description": ""
@@ -29,7 +26,7 @@
         "tags": [
           "Completed Projects"
         ],
-        "description": "Get All Completed Projects",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -43,7 +40,7 @@
         "tags": [
           "Completed Projects"
         ],
-        "description": "Add a new Completed Project",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -51,22 +48,9 @@
             "schema": {
               "type": "object",
               "properties": {
-                
-                  "projectName": {
-                      "example": "any"
-                  },
-                  "projectDescription": {
-                      "example": "any"
-                  },
-                  "technologies": {
-                      "example": "any"
-                  },
-                  "completionDate": {
-                      "example": "any"
-                  },
-                  "projectManager": {
-                      "example": "any"
-                  }
+                "projectName": {
+                  "example": "any"
+                }
               }
             }
           }
@@ -81,27 +65,23 @@
         }
       }
     },
-    "/completedprojects/{completedprojects}": {
+    "/completedprojects/{id}": {
       "get": {
         "tags": [
           "Completed Projects"
         ],
-        "description": "Get A Single Completed Project By ID",
+        "description": "",
         "parameters": [
           {
-            "name": "completedprojects",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Please Enter Completed Project ID"
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -112,14 +92,13 @@
         "tags": [
           "Completed Projects"
         ],
-        "description": "Update Completed Project By ID",
+        "description": "",
         "parameters": [
           {
-            "name": "completedprojects",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Please Enter Completed Project ID"
+            "type": "string"
           },
           {
             "name": "body",
@@ -127,23 +106,22 @@
             "schema": {
               "type": "object",
               "properties": {
-                
                 "projectName": {
-                    "example": "any"
+                  "example": "any"
                 },
                 "projectDescription": {
-                    "example": "any"
+                  "example": "any"
                 },
                 "technologies": {
-                    "example": "any"
+                  "example": "any"
                 },
                 "completionDate": {
-                    "example": "any"
+                  "example": "any"
                 },
                 "projectManager": {
-                    "example": "any"
+                  "example": "any"
                 }
-            }
+              }
             }
           }
         ],
@@ -166,14 +144,13 @@
         "tags": [
           "Completed Projects"
         ],
-        "description": "Delete Completed Project By ID",
+        "description": "",
         "parameters": [
           {
-            "name": "completedprojects",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Please Enter Completed Project ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -197,7 +174,7 @@
         "tags": [
           "Contacts"
         ],
-        "description": "Get All Contacts",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -211,7 +188,7 @@
         "tags": [
           "Contacts"
         ],
-        "description": "Add A New Contact",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -221,22 +198,7 @@
               "properties": {
                 "name": {
                   "example": "any"
-              },
-              "title": {
-                  "example": "any"
-              },
-              "email": {
-                  "example": "any"
-              },
-              "phone": {
-                  "example": "any"
-              },
-              "department": {
-                  "example": "any"
-              },
-              "projects": {
-                "example": "any"
-            }
+                }
               }
             }
           }
@@ -251,19 +213,18 @@
         }
       }
     },
-    "/contacts/{contacts}": {
+    "/contacts/{id}": {
       "get": {
         "tags": [
           "Contacts"
         ],
-        "description": "Get A Single Contact By ID",
+        "description": "",
         "parameters": [
           {
-            "name": "contacts",
+            "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "Please Enter A Contacts ID"
+            "type": "string"
           }
         ],
         "responses": {
@@ -320,7 +281,7 @@
         }
       }
     },
-    "/projects/{projects}": {
+    "/projects/{id}": {
       "get": {
         "tags": [
           "Projects"
@@ -328,7 +289,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "projects",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -337,9 +298,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -353,7 +311,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "projects",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -364,6 +322,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "projectName": {
+                  "example": "any"
+                },
                 "company": {
                   "example": "any"
                 },
@@ -402,7 +363,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "projects",
+            "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -424,113 +385,101 @@
         }
       }
     },
-          "/teams/": {
-            "get": {
-              "tags": [
-                "Teams"
-              ],
-              "description": "Get All Teams",
-              "responses": {
-                "200": {
-                  "description": "OK"
-                },
-                "500": {
-                  "description": "Internal Server Error"
-                }
-              }
-            },
-            "post": {
-              "tags": [
-                "Teams"
-              ],
-              "description": "Add a new Team",
-              "parameters": [
-                {
-                  "name": "body",
-                  "in": "body",
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      
-                        "teamName": {
-                            "example": "any"
-                        },
-                        "teamGoal": {
-                            "example": "any"
-                        },
-                        "teamTask": {
-                            "example": "any"
-                        }
-                    }
-                  }
-                }
-              ],
-              "responses": {
-                "201": {
-                  "description": "Created"
-                },
-                "500": {
-                  "description": "Internal Server Error"
-                }
-              }
-            }
+    "/teams/": {
+      "get": {
+        "tags": [
+          "Teams"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           },
-              "/teams/{teams}": {
-                "get": {
-                  "tags": [
-                    "Teams"
-                  ],
-                  "description": "Get A Single Team By ID",
-                  "parameters": [
-                    {
-                      "name": "teams",
-                      "in": "path",
-                      "required": true,
-                      "type": "string",
-                      "description": "Please Enter the Team ID"
-                    }
-                  ],
-                  "responses": {
-                    "200": {
-                      "description": "OK"
-                    },
-                    "404": {
-                      "description": "Not Found"
-                    },
-                    "500": {
-                      "description": "Internal Server Error"
-                    }
-                  }
-                },
-                "delete": {
-                  "tags": [
-                    "Teams"
-                  ],
-                  "description": "Delete Team by ID",
-                  "parameters": [
-                    {
-                      "name": "teams",
-                      "in": "path",
-                      "required": true,
-                      "type": "string",
-                      "description": "Please Enter the Team ID"
-                    }
-                  ],
-                  "responses": {
-                    "200": {
-                      "description": "OK"
-                    },
-                    "400": {
-                      "description": "Bad Request"
-                    },
-                    "404": {
-                      "description": "Not Found"
-                    },
-                    "500": {
-                      "description": "Internal Server Error"
-                    }
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Teams"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "teamName": {
+                  "example": "any"
+                }
               }
             }
           }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
+    },
+    "/teams/{id}": {
+      "get": {
+        "tags": [
+          "Teams"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Teams"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    }
+  }
+}
